frontend/src/styles/responsive.css
/** RESPONSIVE STYLES **/

/* CONTROL POSITIONS */
.secondary-control {
  min-width: var(--size-button);
  min-height: var(--height-button);
}

.pos-bottom-right-control {
  position: absolute;
  bottom: calc(-1 * var(--height-button));
  right: 0;
  display: flex;
  align-items: center;
  gap: 0;
}

.pos-bottom-left-control {
  position: absolute;
  bottom: calc(-1 * var(--height-button));
  left: 0;
  display: flex;
  align-items: center;
  gap: 0;
}

.pos-mastered-toggle {
  position: absolute;
  bottom: -36px;
  left: 16px;
}

.help-btn-margin {
  margin-bottom: 60px;
}

.pos-help-top-left {
  position: absolute;
  top: -0px;
  left: 16px;
}

.pos-help-bottom-right {
  position: absolute;
  bottom: -0px;
  right: 16px;
}

.pos-help-bottom-left {
  position: absolute;
  bottom: -0px;
  left: 16px;
}

@media (max-height: 400px) {
  .pos-bottom-right-control {
    position: fixed;
    right: 0;
    bottom: 0;
    flex-direction: column;
  }
  .pos-bottom-left-control {
    position: fixed;
    left: 0;
    bottom: 0;
    flex-direction: column-reverse;
  }
  .pos-mastered-toggle {
    bottom: -36px;
    left: 16px;
  }
  .help-btn-margin {
    margin-bottom: 0px;
  }
}

.pos-home-bottom-right-control {
  position: absolute;
  bottom: calc(-1 * var(--height-button));
  right: 0;
  display: flex;
  align-items: center;
  gap: 0;
}

/* HOME PAGE */
.home-title {
   @apply mb-8;
}
.home-body {
  @apply my-4;
}



@media (max-height: 400px) {
  .home-title {
     @apply mb-6 mt-8;
  }
  .home-body {
    @apply mt-8;
  }
}

